@@ -85,9 +85,9 @@ class SqlProcedureCallTest {
         dto.param1 = 3;
         dto.param2 = 5;
         jdbcManager.callBySql("{call PROC_DTO_PARAM(?, ?, ?)}", dto).execute();
-        assertEquals(new Integer(3), dto.param1);
-        assertEquals(new Integer(8), dto.param2);
-        assertEquals(new Integer(3), dto.param3);
+        assertEquals(Integer.valueOf(3), dto.param1);
+        assertEquals(Integer.valueOf(8), dto.param2);
+        assertEquals(Integer.valueOf(3), dto.param3);
     }
 
     /**
